@@ -7,7 +7,7 @@
 			available_to_all = true;
 			condition_script = "oolite-conditions.js";
 			requires_non_full_fuel = true;
-			sort_order = 1; // always first
+			purchase_sort_order = 1; // always first
 		}
 	),
 	(
